# JemUtilities

./: CMakeLists.txt  LICENSE
src/: backlight_set.cpp  brcm_patchram_plus.c
